working on #42: add a autolayout constraint for the top toolbar

--- a/belis-app/Main.storyboard
+++ b/belis-app/Main.storyboard
@@ -303,8 +303,8 @@
                                     </barButtonItem>
                                 </items>
                             </toolbar>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Wda-ui-DdU" userLabel="TopToolbar">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wda-ui-DdU" userLabel="TopToolbar">
+                                <rect key="frame" x="0.0" y="30" width="600" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="8zs-TB-ivE"/>
                                 </constraints>
@@ -383,14 +383,17 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailingMargin" secondItem="Vle-ou-viq" secondAttribute="trailing" constant="-20" id="4nh-JD-8G3" userLabel="BOT Horizontal Space - (-20) - View - BottomToolbar"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Wda-ui-DdU" secondAttribute="trailing" constant="-20" id="4pz-Cm-eNV"/>
                             <constraint firstItem="Wda-ui-DdU" firstAttribute="top" secondItem="m61-XT-Tbh" secondAttribute="bottom" id="6ny-k3-Gs8" userLabel="TOP Vertical Space - TopToolbar - Top Layout Guide"/>
                             <constraint firstItem="CN5-5g-J3R" firstAttribute="top" secondItem="7Kb-8o-11z" secondAttribute="bottom" id="9AU-a4-lVb" userLabel="TV Vertical Space - Bottom Layout Guide - Table View"/>
                             <constraint firstItem="7Kb-8o-11z" firstAttribute="leading" secondItem="Uvj-up-cn7" secondAttribute="leadingMargin" constant="-20" id="ANB-1D-2it" userLabel="TV Horizontal Space - (-20) - Table View - View"/>
+                            <constraint firstItem="Wda-ui-DdU" firstAttribute="leading" secondItem="Uvj-up-cn7" secondAttribute="leadingMargin" constant="-20" id="Bqu-bn-VlT"/>
                             <constraint firstItem="fWn-J2-ozd" firstAttribute="top" secondItem="Wda-ui-DdU" secondAttribute="bottom" id="EDI-PG-I3T" userLabel="MAP Vertical Space - Map View - TopToolbar"/>
                             <constraint firstItem="fWn-J2-ozd" firstAttribute="leading" secondItem="7Kb-8o-11z" secondAttribute="trailing" id="EVc-7e-3mS" userLabel="MAP Horizontal Space - Map View - Table View"/>
                             <constraint firstItem="Wda-ui-DdU" firstAttribute="leading" secondItem="Uvj-up-cn7" secondAttribute="leadingMargin" constant="-20" id="IF6-TC-dUt" userLabel="TOP Horizontal Space - (-20) - TopToolbar - View"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Wda-ui-DdU" secondAttribute="trailing" constant="-20" id="Jo1-cT-fgB" userLabel="TOP Horizontal Space - (-20) - View - TopToolbar"/>
                             <constraint firstItem="fWn-J2-ozd" firstAttribute="bottom" secondItem="Uvj-up-cn7" secondAttribute="bottomMargin" id="QKh-uU-mlz" userLabel="MAP Vertical Space - Map View - View"/>
+                            <constraint firstItem="Wda-ui-DdU" firstAttribute="top" secondItem="Uvj-up-cn7" secondAttribute="topMargin" constant="30" id="Qsy-fq-5AU"/>
                             <constraint firstItem="Vle-ou-viq" firstAttribute="leading" secondItem="7Kb-8o-11z" secondAttribute="trailing" id="bEb-MF-jOI" userLabel="BOT Horizontal Space - BottomToolbar - Table View"/>
                             <constraint firstAttribute="trailingMargin" secondItem="fWn-J2-ozd" secondAttribute="trailing" constant="-20" id="d5j-o5-wHz" userLabel="MAP Horizontal Space - (-20) - View - Map View"/>
                             <constraint firstItem="CN5-5g-J3R" firstAttribute="top" secondItem="Vle-ou-viq" secondAttribute="bottom" id="ftA-Kh-2pG" userLabel="BOT Vertical Space - Bottom Layout Guide - BottomToolbar"/>
